Ensure path layer surface is created

When getting the surface from a path layer,
ensure that the right and left surfaces are
merged if the surface isn't yet available.
This happens when a layer is realized "on-screen"
as is the case when printing routes in gnome-maps.

https://bugzilla.gnome.org/show_bug.cgi?id=772477